Touchpad KCM: Don't write default values to active config

The default values are the default, so this doesn't make a lot of sense.

BUG: 427771


(cherry picked from commit 119f55b218722310ad4b94c68f607b0fa4b7864c)